fixed search state and zoom and pan tweaks

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -533,6 +533,11 @@ div.map-app-map-container {
   background-color: white;
 }
 
+.sea-search-initiative-active {
+  color: white;
+  background-color: var(--dark);
+}
+
 .ml-auto {
   margin-left: auto;
 }
