added caching to php, fixed initial bounds issue, dialog bubble tweaks

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -584,6 +584,8 @@ div.leaflet-popup-content {
   /* NB also requires setting maxWidth in leaflet Marker bindpopup, to make popup wide enough for big text */
   /* 200% works well for presentations: */
   /*font-size: 200%; */
+  max-height:210px;
+
 }
 
 .sea-initiative-popup .leaflet-popup-content-wrapper {
