--- a/www/css/main.css
+++ b/www/css/main.css
@@ -446,6 +446,10 @@ map-app {
 .map-button {
   margin: 2rem;
 }
+.map-button-fullscreen{
+  display: none;
+  }
+
 
 @media (min-width: 610px) {
   .section h1 {
@@ -498,9 +502,11 @@ map-app {
   .sea-map-embed {
     display: block;
   }
-
   .map-button {
     display: none;
+  }
+  .map-button-fullscreen{
+    display: flex;
   }
 
   .heading {
