--- a/www/css/main.css
+++ b/www/css/main.css
@@ -451,7 +451,7 @@ map-app {
   }
 
 
-@media (min-width: 610px) {
+@media (min-device-width: 610px) {
   .section h1 {
     font-size: 2.1rem;
   }
@@ -494,7 +494,7 @@ map-app {
   }
 }
 
-@media (min-width: 972px) {
+@media (min-device-width: 972px) {
   .hero {
     display: flex;
   }
@@ -547,13 +547,13 @@ map-app {
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-device-width: 1000px) {
   .header-inner {
     max-width: 95%;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-device-width: 1200px) {
   .section-container {
     width: 90%;
     max-width: 1300px;
