www/map-app/styles/style.css - try and prevent Safari/iOS style bug
https://github.com/SolidarityEconomyAssociation/dotcoop-project/issues/9

Evidently Flexbox layout support still a bit squiffy on iOS/Safari.

https://stackoverflow.com/questions/24899943/how-do-i-make-flex-box-work-in-safari

I managed to get an iPad, and tried a few of the suggestions here and
one worked (adequately at least: there are differences in behaviour,
not sure if they're intentional) The one which worked: replace
display:flex; with display:flex;flex: 1 0 auto; in all cases found in
map-app.css

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -364,6 +364,7 @@ body {
   bottom: 0;
   width: 100%;
   display: flex;
+  flex: 1 0 auto;
   flex-direction: column;
   background-color: white;
 }
@@ -371,6 +372,7 @@ body {
 .sea-initiatives-list-sidebar-content,
 .sea-initiative-sidebar-content {
   display: flex;
+  flex: 1 0 auto;
   flex-direction: column;
   padding: 0 0 1.4em;
   overflow-y: auto;
@@ -468,6 +470,7 @@ div.map-app-map-container {
 
 .map-app-sidebar-header {
   display: flex;
+  flex: 1 0 auto;
   justify-content: flex-start;
   background: white;
   color: var(--dark);
@@ -601,6 +604,7 @@ div.leaflet-popup-content {
 
 .sea-initiative-popup .leaflet-popup-content {
   display: flex;
+  flex: 1 0 auto;
   flex-direction: row;
   margin: 0;
 }
@@ -784,6 +788,7 @@ div.leaflet-popup-content {
 @media (max-device-width: 1080px) {
   .initiative-list-sidebar-btn-wrapper {
     display: flex;
+    flex: 1 0 auto;
     justify-content: flex-start;
     font-size: 1.4em;
   }
