map-app/styles/style.css - coax sidebar scrolling in both safari/ff
On iOS. Informed by an understanding of flexbox, but also quite empirical.

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -373,9 +373,10 @@ body {
   display: flex;
   flex-direction: column;
   padding: 0 0 1.4em;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
   font-weight: 400;
+}
+.sea-initiatives-list-sidebar-content {
+  height: 100%;
 }
 
 .sea-initiative-non-geo {
@@ -510,6 +511,8 @@ div.map-app-map-container {
 
 .sea-initiative-list {
   margin: 0;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .sea-directory-list li,
@@ -786,6 +789,7 @@ div.leaflet-popup-content {
     display: flex;
     justify-content: flex-start;
     font-size: 1.4em;
+    flex: 1 0 auto;
   }
 
   .sidebar-normal-size-close-btn {
