--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -27,7 +27,7 @@
   --sea-font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --sidebar-width: 240px;
+  --sidebar-width: 296px;
 }
 
 html,
@@ -341,6 +341,8 @@ body {
 .sea-sidebar {
   position: absolute;
   width: var(--sidebar-width);
+  /* limit width to size of container, minus estimated sidebar button size */
+  max-width: calc(100% - 50px); 
   height: 100%;
   top: 0;
   bottom: 0;
