--- a/www/map-app/map-app.css
+++ b/www/map-app/map-app.css
@@ -1,6 +1,6 @@
 @import url("https://www.w3schools.com/w3css/4/w3.css");
 @import url("~leaflet.awesome-markers/dist/leaflet.awesome-markers.css");
-@import url("~font-awesome/css/font-awesome.css");
+@import url("~@fortawesome/fontawesome-free/css/all.css");
 @import url("~leaflet-contextmenu/dist/leaflet.contextmenu.css");
 @import url("~leaflet.markercluster/dist/MarkerCluster.css");
 @import url("~leaflet.markercluster/dist/MarkerCluster.Default.css");
