grey out the filters that have nothing behind them

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -157,6 +157,10 @@ body {
   color: var(--black);
 }
 
+.advanced-option:disabled {
+  color: #ccc; 
+}
+
 .sidebar-button-container{
   margin-top: 5px;
 }
