--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -632,6 +632,10 @@ input[type="search"] {
 }
 
 /* Sidebar */
+.sea-initiative-sidebar{
+  overflow-y: scroll;
+}
+
 .sea-initiative-sidebar .sea-initiative-details {
   padding-top: 0;
 }
