--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -639,14 +639,6 @@ input[type="search"] {
 
 /* Popup */
 
-div.leaflet-popup-content {
-  /* NB also requires setting maxWidth in leaflet Marker bindpopup, to make popup wide enough for big text */
-  /* 200% works well for presentations: */
-  /*font-size: 200%; */
-  /* If you change the height, be sure to change the height in view/map.js ln 363 */
-  height: 300px;
-  width: 50vw!important;
-}
 
 .sea-initiative-popup .leaflet-popup-content-wrapper {
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
@@ -662,7 +654,6 @@ div.leaflet-popup-content {
 
 .sea-initiative-popup .sea-initiative-details {
   max-height: 600px;
-  width: 66%;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   padding: 1em 1.5em;
@@ -675,7 +666,7 @@ div.leaflet-popup-content {
   padding: 1em 1.5em 1.5em;
   border-radius: 0 6px 6px 0;
   background: #f0f0f0;
-  width: 33%;
+  overflow-y: auto;
 }
 
 .sea-initiative-popup h2,
