map-app/* - minimal changes to make loader animation show when data switched
Switching data triggers it to be reloaded, and so the reason for the
pause should be made more evident by showing the loader animation.

Looks like this was the original intent, but code is buggy.

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -767,6 +767,9 @@ input[type="search"] {
 #dir-title {
   padding: 0px 0px 0px 16px;
 }
+#loadingCircle * {
+  z-index: 400;
+}
 
 #loadingCirclespin {
   border: 16px solid #f3f3f3;
