map-app/styles/style.css - make loader text darker
It's not really visible.

--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -821,6 +821,7 @@ input[type="search"] {
   /* margin is -0.5 * dimension */
   margin-top: -40px;
   font-size: 20px;
+  color: var(--dark);
 }
 
 #map-app-leaflet-map {
