--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -797,6 +797,7 @@ div.leaflet-popup-content {
   /* margin is -0.5 * dimension */
   margin-top: -40px;
   font-size: 20px;
+  color: var(--dark);
 }
 
 #map-app-leaflet-map {
