--- a/www/map-app/map-app.css
+++ b/www/map-app/map-app.css
@@ -1,5 +1,5 @@
 @import url("./w3.css");
-@import url("~leaflet.awesome-markers/dist/leaflet.awesome-markers.css");
+/*@import url("~leaflet.awesome-markers/dist/leaflet.awesome-markers.css");*/
 @import url("~@fortawesome/fontawesome-free/css/all.css");
 @import url("~leaflet-contextmenu/dist/leaflet.contextmenu.css");
 @import url("~leaflet.markercluster/dist/MarkerCluster.css");
