--- a/www/map-app/styles/style.css
+++ b/www/map-app/styles/style.css
@@ -58,30 +58,28 @@ body {
   height: 100%;
 }
 
-/* .map-app {
+/* Style the marker icons */
+.sea-marker svg.sea-map-icon {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-} */
-
-/* Override default Awesome Markers image */
-
-.sea-marker {
-  background: url("../images/markers-sea.png") no-repeat 0 0;
-  width: 35px;
-  height: 46px;
-  position: absolute;
   left: 0;
   top: 0;
-  display: block;
-  text-align: center;
 }
-
-.sea-marker {
-  background-image: url("../images/markers-sea.png");
+.sea-marker svg.sea-map-shadow {
+  position: absolute;
+  height: 100%;
+}
+.svg-icon-path {
+  fill: red;
+}
+/* Style the marker symbols */
+.sea-marker::before {
+  content: "\f0a3";
+  position: absolute;
+  left: 50%;
+  top: 32%;
+  transform: translate(-50%, -50%) scale(120%);
 }
 
 .sea-non-geo-marker {
@@ -95,31 +93,6 @@ body {
 .sea-selected {
   filter: brightness(0.8);
 }
-
-.awesome-marker-shadow {
-  background-image: url("../images/markers-shadow.png");
-  background-size: 35px 16px;
-}
-
-@media (min--moz-device-pixel-ratio: 1.5),
-(-o-min-device-pixel-ratio: 3/2),
-(-webkit-min-device-pixel-ratio: 1.5),
-(min-device-pixel-ratio: 1.5),
-(min-resolution: 1.5dppx) {
-  .sea-marker {
-    background-image: url(../images/markers-sea@2x.png);
-    background-size: 720px 46px;
-  }
-
-  .awesome-marker-shadow {
-    background-image: url(../images/markers-shadow@2x.png);
-    background-size: 35px 16px;
-  }
-}
-
-/* ul.sea-directory-list {
-  margin-left: 0.5rem;
-} */
 
 .sea-directory-list.colours li {
   border-left-style: solid;
@@ -164,203 +137,6 @@ body {
 .sidebar-button-container{
   margin-top: 5px;
 }
-
-/* Arts, Media, Culture & Leisure. */
-.sea-initiatives-list-sidebar.sea-field-am10,
-.sea-field-am10 .sea-initiatives-list-sidebar-content,
-.sea-field-am10:hover,
-.sea-field-am10.sea-field-active {
-  background: var(--pink) !important;
-}
-
-.sea-directory-list .sea-field-am10 {
-  border-color: var(--pink) !important;
-}
-
-.awesome-marker-icon-am10 {
-  background-position: 0 0;
-}
-
-/* Campaigning, Activism & Advocacy. */
-.sea-initiatives-list-sidebar.sea-field-am20,
-.sea-field-am20 .sea-initiatives-list-sidebar-content,
-.sea-field-am20:hover,
-.sea-field-am20.sea-field-active {
-  background: var(--orange) !important;
-  /* color: var(--dark) !important; */
-}
-
-.sea-directory-list .sea-field-am20 {
-  border-color: var(--orange) !important;
-}
-
-.awesome-marker-icon-am20 {
-  background-position: -324px 0;
-}
-
-/* Community & Collective Spaces. */
-.sea-initiatives-list-sidebar.sea-field-am30,
-.sea-field-am30 .sea-initiatives-list-sidebar-content,
-.sea-field-am30:hover,
-.sea-field-am30.sea-field-active {
-  background: var(--teal) !important;
-  /* color: var(--dark) !important; */
-}
-
-.sea-directory-list .sea-field-am30 {
-  border-color: var(--teal) !important;
-}
-
-.awesome-marker-icon-am30 {
-  background-position: -144px 0;
-}
-
-/* Education. */
-.sea-initiatives-list-sidebar.sea-field-am40,
-.sea-field-am40 .sea-initiatives-list-sidebar-content,
-.sea-field-am40:hover,
-.sea-field-am40.sea-field-active {
-  background: var(--maroon) !important;
-}
-
-.sea-directory-list .sea-field-am40 {
-  border-color: var(--maroon) !important;
-}
-
-.awesome-marker-icon-am40 {
-  background-position: -468px 0;
-}
-
-/* Energy. */
-.sea-initiatives-list-sidebar.sea-field-am50,
-.sea-field-am50 .sea-initiatives-list-sidebar-content,
-.sea-field-am50:hover,
-.sea-field-am50.sea-field-active {
-  background: var(--blue) !important;
-}
-
-.sea-directory-list .sea-field-am50 {
-  border-color: var(--blue) !important;
-}
-
-.awesome-marker-icon-am50 {
-  background-position: -72px 0;
-}
-
-/* Food. */
-.sea-initiatives-list-sidebar.sea-field-am60,
-.sea-field-am60 .sea-initiatives-list-sidebar-content,
-.sea-field-am60:hover,
-.sea-field-am60.sea-field-active {
-  background: var(--green) !important;
-}
-
-.sea-directory-list .sea-field-am60 {
-  border-color: var(--green) !important;
-}
-
-.awesome-marker-icon-am60 {
-  background-position: -216px 0;
-}
-
-/* Goods & Services. */
-.sea-initiatives-list-sidebar.sea-field-am70,
-.sea-field-am70 .sea-initiatives-list-sidebar-content,
-.sea-field-am70:hover,
-.sea-field-am70.sea-field-active {
-  background: var(--red) !important;
-}
-
-.sea-directory-list .sea-field-am70 {
-  border-color: var(--red) !important;
-}
-
-.awesome-marker-icon-am70 {
-  background-position: -360px 0;
-}
-
-/* Health, Social Care & Wellbeing. */
-.sea-initiatives-list-sidebar.sea-field-am80,
-.sea-field-am80 .sea-initiatives-list-sidebar-content,
-.sea-field-am80:hover,
-.sea-field-am80.sea-field-active {
-  background: var(--navy) !important;
-}
-
-.sea-directory-list .sea-field-am80 {
-  border-color: var(--navy) !important;
-}
-
-.awesome-marker-icon-am80 {
-  background-position: -36px 0;
-}
-
-/* Housing. */
-.sea-initiatives-list-sidebar.sea-field-am90,
-.sea-field-am90 .sea-initiatives-list-sidebar-content,
-.sea-field-am90:hover,
-.sea-field-am90.sea-field-active {
-  background: var(--brown) !important;
-  /* color: var(--aqua-contrast) !important; */
-}
-
-.sea-directory-list .sea-field-am90 {
-  border-color: var(--brown) !important;
-}
-
-.awesome-marker-icon-am90 {
-  background-position: -576px 0;
-}
-
-/* Money & Finance. */
-.sea-initiatives-list-sidebar.sea-field-am100,
-.sea-field-am100 .sea-initiatives-list-sidebar-content,
-.sea-field-am100:hover,
-.sea-field-am100.sea-field-active {
-  background: var(--purple) !important;
-}
-
-.sea-directory-list .sea-field-am100 {
-  border-color: var(--purple) !important;
-}
-
-.awesome-marker-icon-am100 {
-  background-position: -432px 0;
-}
-
-/* Nature, Conservation & Environment. */
-.sea-initiatives-list-sidebar.sea-field-am110,
-.sea-field-am110 .sea-initiatives-list-sidebar-content,
-.sea-field-am110:hover,
-.sea-field-am110.sea-field-active {
-  background: var(--olive) !important;
-}
-
-.sea-directory-list .sea-field-am110 {
-  border-color: var(--olive) !important;
-}
-
-.awesome-marker-icon-am110 {
-  background-position: -180px 0;
-}
-
-/* Reduce, Reuse, Repair & Recycle. */
-.sea-initiatives-list-sidebar.sea-field-am120,
-.sea-field-am120 .sea-initiatives-list-sidebar-content,
-.sea-field-am120:hover,
-.sea-field-am120.sea-field-active {
-  background: var(--gray) !important;
-  /* color: var(--yellow-contrast) !important; */
-}
-
-.sea-directory-list .sea-field-am120 {
-  border-color: var(--gray) !important;
-}
-
-.awesome-marker-icon-am120 {
-  background-position: -612px 0;
-}
-
 /* Sidebar */
 
 .sea-sidebar {
