--- a/src/map-app/styles/style.css
+++ b/src/map-app/styles/style.css
@@ -647,7 +647,7 @@ input[type="search"] {
 
 /* Popup */
 
-.mapboxgl-popup-content {
+.maplibregl-popup-content {
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   display: flex;
@@ -656,11 +656,11 @@ input[type="search"] {
   color: #333;
 }
 
-.sea-initiative-popup .mapboxgl-popup-content {
+.sea-initiative-popup .maplibregl-popup-content {
   padding: 0;
 }
 
-.sea-initiative-tooltip .mapboxgl-popup-content {
+.sea-initiative-tooltip .maplibregl-popup-content {
   padding: 3px 8px;
 }
 
